# PWE

./: .dockerignore  .env.example  .flake8  .gitignore  .gitmodules  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: fastapi-app.yml
alembic/: env.py
alembic/versions/: 2023_10_16_2300-14d6397bc3ba_create_table_todo_and_status.py  2023_10_28_1430-147299881313_create_user_table.py  2023_10_28_1841-2c307d52a17a_update_user_table.py  2023_10_29_1353-fb54881cd457_delete_username_field_from_user_table.py
src/backend/: __init__.py  main.py  utils.py
src/backend/api_v1/: __init__.py
src/backend/api_v1/todo/: __init__.py  constants.py  models.py  service.py  utils.py  views.py
src/backend/api_v1/user/: __init__.py  auth.py  dependencies.py  manager.py  models.py  services.py  views.py
src/backend/database/: db_helper.py
src/backend/static/templates/: index.html
src/pwe/: __init__.py  __main__.py  app.py  database.py  dependencies.py  main.py  settings.py  utils.py
src/pwe/api_v1/: __init__.py
src/pwe/api_v1/todo/: __init__.py  models.py  query_params.py  schemas.py  service.py  utils.py  views.py
src/pwe/api_v1/user/: __init__.py  auth.py  dependencies.py  manager.py  models.py  schemas.py  services.py  views.py
src/pwe/database/: base.py  db_helper.py
src/pwe/models/: __init__.py  status.py  todo.py
src/pwe/static/css/: styles.css
src/pwe/static/templates/: index.html
tests/: conftest.py
tests/migrations/: test_migrations.py
tests/todo/: test_todo.py
tests/user/: test_user.py
