[tool.poetry]
name = "pwe"
version = "0.0.1"
description = "Plan, write down, execute"
authors = ["Mikhail Vartikyan <m.vartikyan@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.22"}
alembic = "^1.9.4"
pytest = "^7.2.1"
python-dotenv = "^1.0.0"
asyncpg = "^0.28.0"

[tool.poetry.group.dev.dependencies]
flake8-fastapi = "^0.7.0"
flake8-bugbear = "^23.9.16"
flake8 = "^6.1.0"
pep8-naming = "^0.13.3"
flake8-async = "^22.11.14"
flake8-docstrings-complete = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
